--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "animejs": "^3.1.0",
     "await-to-js": "^2.1.1",
+    "lodash.debounce": "^4.0.8",
     "three": "^0.109.0"
   },
   "devDependencies": {
