--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lut-loader": "^0.0.2",
     "threejs-glsl-loader": "^1.0.4",
     "uglifyjs-webpack-plugin": "1.3.0",
+    "url-loader": "^2.2.0",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.8.0",
