--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "animejs": "^3.1.0",
     "await-to-js": "^2.1.1",
     "lodash.debounce": "^4.0.8",
+    "lodash.findindex": "^4.6.0",
     "lodash.throttle": "^4.1.1",
     "three": "^0.109.0"
   },
