--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "src/main.js",
   "license": "MIT",
   "scripts": {
+    "lint:css": "stylelint **/*.{svelte,html,js,css}",
     "start": "webpack-dev-server --inline --progress",
     "build": "webpack --env build"
   },
@@ -29,14 +30,26 @@
     "@babel/runtime": "^7.6.2",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
     "eslint": "^6.3.0",
+    "eslint-config-prettier": "^6.5.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^3.0.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-svelte3": "^2.7.3",
     "file-loader": "^4.2.0",
     "glslify-loader": "^2.0.0",
     "gltf-loader-2": "^0.0.3",
     "lut-loader": "^0.0.2",
+    "mini-css-extract-plugin": "^0.8.0",
+    "prettier": "^1.19.1",
+    "prettier-plugin-svelte": "^0.7.0",
+    "serve": "^11.2.0",
+    "style-loader": "^1.0.0",
+    "stylelint-config-standard": "^19.0.0",
+    "svelte": "^3.14.1",
+    "svelte-loader": "^2.13.6",
     "threejs-glsl-loader": "^1.0.4",
     "uglifyjs-webpack-plugin": "1.3.0",
     "url-loader": "^2.2.0",
