--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "svelte": "^3.14.1",
     "svelte-loader": "^2.13.6",
     "threejs-glsl-loader": "^1.0.4",
-    "uglifyjs-webpack-plugin": "2.2.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^3.0.0",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.8",
