--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "another-dumb-zombie-game",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": "Ustym Ukhman <ustym.ukhman@gmail.com>",
   "description": "Another Dumb Zombie Game",
   "homepage": "https://github.com/UstymUkhman/another-dumb-zombie-game",
@@ -17,18 +17,18 @@
     "await-to-js": "^2.1.1",
     "lodash.findindex": "^4.6.0",
     "lodash.throttle": "^4.1.1",
-    "three": "^0.113.2"
+    "three": "^0.114.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.0",
-    "@babel/core": "^7.6.0",
+    "@babel/core": "^7.8.6",
     "@babel/node": "^7.6.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-env": "^7.8.6",
     "@babel/runtime": "^7.6.2",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "eslint": "^6.3.0",
@@ -50,8 +50,8 @@
     "stylelint-config-standard": "^20.0.0",
     "svelte": "^3.14.1",
     "svelte-loader": "^2.13.6",
+    "terser-webpack-plugin": "^2.3.5",
     "threejs-glsl-loader": "^1.0.4",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^3.0.0",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.8",
