--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "noImplicitAny": true,
+    "outDir": "../build",
     "module": "commonjs",
     "sourceMap": true,
     "baseUrl": ".",
