--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "postinstall": "electron-builder install-app-deps",
     "test:jest": "./node_modules/.bin/jest --notify",
     "lint:js": "eslint src/**/*{.ts,.tsx,.js,.jsx}",
-    "lint:css": "stylelint **/*.{svelte,html,css}",
+    "lint:css": "stylelint **/*.{svelte,scss,css}",
     "test:cover": "yarn test:jest --coverage",
     "pack:app": "electron-builder --dir",
     "build:web": "webpack --env build",
@@ -80,14 +80,17 @@
     "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.9.0",
     "minimist": "^1.2.5",
+    "node-sass": "^4.14.1",
+    "style-loader": "^1.2.1",
     "stylelint": "^13.5.0",
     "stylelint-config-standard": "^20.0.0",
-    "svelte": "^3.23.0",
+    "svelte": "^3.23.2",
     "svelte-loader": "^2.13.6",
+    "svelte-preprocess": "^3.9.7",
     "terser-webpack-plugin": "^3.0.2",
     "ts-jest": "^26.0.0",
     "ts-loader": "^7.0.5",
-    "typescript": "^3.9.3",
+    "typescript": "^3.9.5",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
