--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "file-loader": "^6.0.0",
     "gltf-loader-2": "^0.0.3",
     "jest": "^26.0.1",
+    "jest-canvas-mock": "^2.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "minimist": "^1.2.5",
     "node-sass": "^4.14.1",
