--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
     "babel-jest": "^26.0.1",
+    "copy-webpack-plugin": "^6.0.2",
     "css-loader": "^3.5.3",
     "electron-builder": "^22.7.0",
     "eslint": "^7.1.0",
