--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
       "@loaders/*": ["node_modules/three/examples/jsm/loaders/*"],
       "@utils/*": ["node_modules/three/examples/jsm/utils/*"],
       "@three/*": ["node_modules/three/src/*"],
+      "@/components/*": ["src/components/*"],
       "@/*": ["src/*"]
     },
 
