--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     },
     "win": {
       "legalTrademarks": "Ustym Ukhman © 2020",
-      "icon": "favicon/icon-512x512.png",
+      "icon": "favicon/favicon-512x512.png",
       "publisherName": "Ustym Ukhman",
       "target": [
         {
