Settings.DEBUG setted & added dynamic import for Stats

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "noImplicitAny": true,
 
     "module": "esnext",
-    "target": "esnext",
+    "target": "es2019",
     "sourceMap": true,
     "jsx": "preserve",
     "checkJs": true,
