--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Another Dumb Zombie Game",
   "author": "Ustym Ukhman <ustym.ukhman@gmail.com>",
   "homepage": "https://github.com/UstymUkhman/another-dumb-zombie-game#readme",
-  "keywords": [],
+  "keywords": ["Dumb","Zombie","Game","Ustym","Ukhman","Ustym Ukhman"],
   "main": "build/main.js",
   "version": "0.1.0",
   "license": "MIT",
