--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "license": "MIT",
   "scripts": {
     "pack:app": "electron-builder --dir --config build/builder.yml",
+    "start:app": "webpack --env app && electron build/main.js",
     "dist:app": "electron-builder --config build/builder.yml",
     "test:jest": "./node_modules/.bin/jest --notify --silent",
-    "start:app": "yarn build:app && electron build/main.js",
     "start:web": "webpack-dev-server --inline --progress",
     "test:clear": "./node_modules/.bin/jest --clearCache",
     "postinstall": "electron-builder install-app-deps",
