Added tests for utils

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "pack:app": "electron-builder --dir --config build/builder.yml",
     "start:app": "webpack --env app && electron build/main.js",
     "dist:app": "electron-builder --config build/builder.yml",
-    "test:jest": "./node_modules/.bin/jest --notify --silent",
+    "test:watch": "./node_modules/.bin/jest --watch --silent",
+    "test:run": "./node_modules/.bin/jest --notify --silent",
     "start:web": "webpack-dev-server --inline --progress",
     "test:clear": "./node_modules/.bin/jest --clearCache",
     "postinstall": "electron-builder install-app-deps",
