--- a/package.json
+++ b/package.json
@@ -3,20 +3,30 @@
   "description": "Another Dumb Zombie Game",
   "author": "Ustym Ukhman <ustym.ukhman@gmail.com>",
   "homepage": "https://github.com/UstymUkhman/another-dumb-zombie-game#readme",
-  "keywords": ["Dumb","Zombie","Game","Ustym","Ukhman","Ustym Ukhman"],
+  "keywords": [
+    "Dumb",
+    "Zombie",
+    "Game",
+    "Ustym",
+    "Ukhman",
+    "Ustym Ukhman"
+  ],
   "main": "build/main.js",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
+    "postinstall": "yarn copy:files && electron-builder install-app-deps",
     "pack:app": "electron-builder --dir --config build/builder.yml",
+    "copy:fonts": "cp public/assets/fonts/* src/assets/fonts/",
     "start:app": "webpack --env app && electron build/main.js",
     "dist:app": "electron-builder --config build/builder.yml",
     "test:watch": "./node_modules/.bin/jest --watch --silent",
     "test:run": "./node_modules/.bin/jest --notify --silent",
     "start:web": "webpack-dev-server --inline --progress",
     "test:clear": "./node_modules/.bin/jest --clearCache",
-    "postinstall": "electron-builder install-app-deps",
+    "copy:files": "yarn copy:fonts && yarn copy:favicon",
     "build:app": "yarn build:web && tsc --project app",
+    "copy:favicon": "cp public/favicon/* favicon/",
     "lint:css": "stylelint **/*.{svelte,scss,css}",
     "lint:js": "eslint src/**/*.{ts,tsx,js,jsx}",
     "test:cover": "yarn test:jest --coverage",
@@ -34,7 +44,7 @@
     "@types/animejs": "^3.1.1",
     "@types/lodash": "^4.14.153",
     "animejs": "^3.2.0",
-    "three": "^0.117.0"
+    "three": "^0.118.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.10.1",
@@ -43,7 +53,6 @@
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
     "babel-jest": "^26.0.1",
-    "copy-webpack-plugin": "^6.0.2",
     "css-loader": "^3.5.3",
     "electron": "^9.0.4",
     "electron-builder": "^22.7.0",
