AssetsLoader manager configured :fire:

--- a/package.json
+++ b/package.json
@@ -15,18 +15,16 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "postinstall": "yarn copy:files && electron-builder install-app-deps",
+    "start:app": "webpack --env app && tsc --project app && electron build/main.js",
+    "postinstall": "yarn copy:fonts && electron-builder install-app-deps",
     "pack:app": "electron-builder --dir --config build/builder.yml",
     "copy:fonts": "cp public/assets/fonts/* src/assets/fonts/",
-    "start:app": "webpack --env app && electron build/main.js",
     "dist:app": "electron-builder --config build/builder.yml",
     "test:watch": "./node_modules/.bin/jest --watch --silent",
     "test:run": "./node_modules/.bin/jest --notify --silent",
     "start:web": "webpack-dev-server --inline --progress",
     "test:clear": "./node_modules/.bin/jest --clearCache",
-    "copy:files": "yarn copy:fonts && yarn copy:favicon",
     "build:app": "yarn build:web && tsc --project app",
-    "copy:favicon": "cp public/favicon/* favicon/",
     "lint:css": "stylelint **/*.{svelte,scss,css}",
     "lint:js": "eslint src/**/*.{ts,tsx,js,jsx}",
     "test:cover": "yarn test:jest --coverage",
