Webpack chunks realocated in folders :boom:

--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
   "license": "MIT",
   "scripts": {
     "start:app": "webpack --env app && tsc --project app && electron build/main.js",
-    "postinstall": "yarn copy:fonts && electron-builder install-app-deps",
     "pack:app": "electron-builder --dir --config build/builder.yml",
-    "copy:fonts": "cp public/assets/fonts/* src/assets/fonts/",
     "dist:app": "electron-builder --config build/builder.yml",
     "test:watch": "./node_modules/.bin/jest --watch --silent",
     "test:run": "./node_modules/.bin/jest --notify --silent",
     "start:web": "webpack-dev-server --inline --progress",
     "test:clear": "./node_modules/.bin/jest --clearCache",
+    "postinstall": "electron-builder install-app-deps",
     "build:app": "yarn build:web && tsc --project app",
     "lint:css": "stylelint **/*.{svelte,scss,css}",
     "lint:js": "eslint src/**/*.{ts,tsx,js,jsx}",
