Windows builder config updated

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -3,7 +3,7 @@
     "noImplicitAny": true,
     "outDir": "../build",
     "module": "commonjs",
-    "sourceMap": true,
+    "sourceMap": false,
     "baseUrl": ".",
 
     "paths": {
