--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "minimist": "^1.2.5",
     "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
     "stylelint": "^13.5.0",
     "stylelint-config-standard": "^20.0.0",
