--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,11 @@
 root = true
 
-[*.{js,jsx,ts,tsx}]
+[*.{svelte,ts,tsx,js,jsx}]
 
 charset = utf-8
 indent_size = 2
 end_of_line = lf
+
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
