--- a/package.json
+++ b/package.json
@@ -39,54 +39,54 @@
     "url": "https://github.com/UstymUkhman/another-dumb-zombie-game/issues"
   },
   "dependencies": {
-    "@types/animejs": "^3.1.1",
-    "@types/lodash": "^4.14.153",
+    "@types/animejs": "^3.1.2",
+    "@types/lodash": "^4.14.160",
     "animejs": "^3.2.0",
-    "three": "^0.118.3"
+    "three": "^0.120.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
-    "@types/jest": "^26.0.3",
-    "@types/node": "12.12.21",
-    "@typescript-eslint/eslint-plugin": "^3.0.2",
-    "@typescript-eslint/parser": "^3.0.2",
-    "babel-jest": "^26.0.1",
+    "@types/jest": "^26.0.10",
+    "@types/node": "14.6.0",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "babel-jest": "^26.3.0",
     "cross-env": "^7.0.2",
-    "css-loader": "^3.5.3",
-    "electron": "^9.0.4",
-    "electron-builder": "^22.7.0",
-    "eslint": "^7.4.0",
+    "css-loader": "3.6.0",
+    "electron": "^10.0.0",
+    "electron-builder": "^22.8.0",
+    "eslint": "^7.7.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^4.0.2",
     "file-loader": "^6.0.0",
     "gltf-loader-2": "^0.0.3",
-    "jest": "^26.0.1",
+    "jest": "^26.4.2",
     "jest-canvas-mock": "^2.2.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "mini-css-extract-plugin": "^0.10.0",
     "minimist": "^1.2.5",
     "node-sass": "^4.14.1",
-    "sass-loader": "^9.0.2",
+    "sass-loader": "^10.0.1",
     "style-loader": "^1.2.1",
     "stylelint": "^13.5.0",
     "stylelint-config-standard": "^20.0.0",
-    "svelte": "^3.23.2",
+    "svelte": "^3.24.1",
     "svelte-loader": "^2.13.6",
-    "svelte-preprocess": "^3.9.12",
-    "terser-webpack-plugin": "^3.0.2",
-    "ts-jest": "^26.0.0",
-    "ts-loader": "^7.0.5",
-    "typescript": "^3.9.6",
+    "svelte-preprocess": "^4.1.1",
+    "terser-webpack-plugin": "^4.1.0",
+    "ts-jest": "^26.3.0",
+    "ts-loader": "^8.0.3",
+    "typescript": "^4.0.2",
     "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
+    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
-    "worker-loader": "^2.0.0"
+    "worker-loader": "^3.0.2"
   },
   "resolutions": {
     "minimist": "^1.2.5"
   },
   "engines": {
-    "node": ">= 9.10.0",
-    "npm": ">= 5.5.0"
+    "node": ">= 12.16.1",
+    "npm": ">= 6.13.4"
   }
 }
