--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@types/animejs": "^3.1.2",
     "@types/lodash": "^4.14.160",
+    "APE": "UstymUkhman/APE",
     "animejs": "^3.2.0",
     "three": "^0.120.0"
   },
