--- a/package.json
+++ b/package.json
@@ -43,17 +43,17 @@
     "@types/lodash": "^4.14.161",
     "APE": "UstymUkhman/APE",
     "animejs": "^3.2.0",
-    "three": "^0.120.1"
+    "three": "^0.121.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@types/jest": "^26.0.13",
-    "@types/node": "14.6.3",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@types/node": "14.11.8",
+    "@typescript-eslint/eslint-plugin": "3.10.1",
+    "@typescript-eslint/parser": "3.10.1",
     "babel-jest": "^26.3.0",
     "cross-env": "^7.0.2",
-    "css-loader": "3.6.0",
+    "css-loader": "4.3.0",
     "electron": "^10.1.1",
     "electron-builder": "^22.8.0",
     "eslint": "^7.7.0",
@@ -63,11 +63,11 @@
     "gltf-loader-2": "^0.0.3",
     "jest": "^26.4.2",
     "jest-canvas-mock": "^2.2.0",
-    "mini-css-extract-plugin": "^0.11.0",
+    "mini-css-extract-plugin": "^1.0.0",
     "minimist": "^1.2.5",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.3",
-    "style-loader": "^1.2.1",
+    "style-loader": "^2.0.0",
     "stylelint": "^13.7.0",
     "stylelint-config-standard": "^20.0.0",
     "svelte": "^3.24.1",
