Add PointerLock request
Add Button component
Update Loader component
Update Material test script
Update Input manager
Refactor GameEvents to Map() logic

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,8 +42,9 @@
     "src/**/*",
     "src/**/*.ts",
     "src/**/*.tsx",
-    "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "src/**/*.svelte",
+    "tests/**/*.tsx",
+    "tests/**/*.ts"
   ],
 
   "exclude": [
