--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "dependencies": {
     "@types/animejs": "^3.1.2",
-    "@types/lodash": "^4.14.161",
+    "@types/lodash.throttle": "^4.1.6",
     "ammo.js": "^0.0.10",
     "animejs": "^3.2.0",
     "three": "^0.121.1"
