--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "description": "Another Dumb Zombie Game",
   "author": "Ustym Ukhman <ustym.ukhman@gmail.com>",
   "homepage": "https://github.com/UstymUkhman/another-dumb-zombie-game#readme",
-  "main": "build/main.js",
+  "main": "src/main.ts",
   "version": "0.2.0",
   "license": "MIT",
+  "private": false,
   "repository": {
     "type": "git",
     "url": "https://github.com/UstymUkhman/another-dumb-zombie-game.git"
