--- a/.eslintrc
+++ b/.eslintrc
@@ -15,12 +15,17 @@
   "plugins": ["@typescript-eslint"],
 
   "rules": {
+    "@typescript-eslint/no-unused-vars": [2, {"vars": "local", "args": "after-used"}],
+    "@typescript-eslint/no-redeclare": 2,
     "@typescript-eslint/no-namespace": 0,
     "generator-star-spacing": 0,
     "quotes": [2, "single"],
+    "no-unused-vars": 0,
+    "no-redeclare": 0,
     "comma-dangle": 2,
     "no-debugger": 1,
     "no-console": 0,
+    "no-undef": 0,
     "semi": 2
   },
 
