--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "email": "ustym.ukhman@gmail.com"
   },
   "keywords": [
-    "game",
-    "webgl",
-    "zombie",
-    "threejs",
+    "fps",
+    "tps",
+    "game",    
+    "zombies",
+    "shooter",
+    "survival",    
+    "survival-shooter",
+    "first-person-shooter",
+    "third-person-shooter",
     "zombie-survival-shooter"
   ],
   "scripts": {
@@ -43,45 +48,45 @@
     "@types/animejs": "^3.1.2",
     "ammo.js": "^0.0.10",
     "animejs": "^3.2.0",
-    "three": "^0.121.1"
+    "three": "^0.124.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
-    "@types/jest": "^26.0.13",
-    "@types/node": "14.11.8",
-    "@typescript-eslint/eslint-plugin": "3.10.1",
-    "@typescript-eslint/parser": "3.10.1",
-    "babel-jest": "^26.3.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "4.3.0",
-    "electron": "^10.1.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
+    "@types/jest": "^26.0.20",
+    "@types/node": "14.14.22",
+    "@typescript-eslint/eslint-plugin": "4.14.0",
+    "@typescript-eslint/parser": "4.14.0",
+    "babel-jest": "^26.6.3",
+    "cross-env": "^7.0.3",
+    "css-loader": "5.0.1",
+    "electron": "^11.2.1",
     "electron-builder": "^22.8.0",
-    "eslint": "^7.7.0",
+    "eslint": "^7.18.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^4.0.2",
-    "file-loader": "^6.1.0",
+    "file-loader": "^6.2.0",
     "gltf-loader-2": "^0.0.3",
-    "jest": "^26.4.2",
+    "jest": "^26.6.3",
     "jest-canvas-mock": "^2.2.0",
-    "mini-css-extract-plugin": "^1.0.0",
+    "mini-css-extract-plugin": "^1.3.4",
     "minimist": "^1.2.5",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^10.0.3",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
-    "stylelint": "^13.7.0",
+    "stylelint": "^13.9.0",
     "stylelint-config-standard": "^20.0.0",
-    "svelte": "^3.24.1",
-    "svelte-loader": "^2.13.6",
-    "svelte-preprocess": "^4.2.1",
-    "terser-webpack-plugin": "^4.1.0",
-    "ts-jest": "^26.3.0",
-    "ts-loader": "^8.0.3",
-    "typescript": "^4.0.2",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "worker-loader": "^3.0.2"
+    "svelte": "^3.31.2",
+    "svelte-loader": "^3.0.0",
+    "svelte-preprocess": "^4.6.3",
+    "terser-webpack-plugin": "^4.2.3",
+    "ts-jest": "^26.4.4",
+    "ts-loader": "^8.0.14",
+    "typescript": "^4.1.3",
+    "url-loader": "^4.1.0",    
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.10.3",
+    "worker-loader": "^3.0.7"
   },
   "resolutions": {
     "minimist": "^1.2.5"
