--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "keywords": [
     "fps",
     "tps",
-    "game",    
+    "game",
     "zombies",
     "shooter",
-    "survival",    
+    "survival",
     "survival-shooter",
     "first-person-shooter",
     "third-person-shooter",
@@ -45,17 +45,18 @@
     "serve": "npx http-server"
   },
   "dependencies": {
-    "@types/animejs": "^3.1.2",
     "ammo.js": "^0.0.10",
     "animejs": "^3.2.0",
-    "three": "^0.125.0"
+    "three": "^0.126.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.12.1",
+    "@types/animejs": "^3.1.2",
     "@types/jest": "^26.0.20",
     "@types/node": "14.14.22",
-    "@typescript-eslint/eslint-plugin": "4.14.0",
-    "@typescript-eslint/parser": "4.14.0",
+    "@types/three": "^0.125.3",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
     "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
     "css-loader": "5.0.1",
@@ -82,7 +83,7 @@
     "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
-    "url-loader": "^4.1.0",    
+    "url-loader": "^4.1.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.10.3",
