--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.mp3 filter=lfs diff=lfs merge=lfs -text
 *.blend filter=lfs diff=lfs merge=lfs -text
 *.blend1 filter=lfs diff=lfs merge=lfs -text
 public/**/textures/*.* filter=lfs diff=lfs merge=lfs -text
+public/assets/music/*.mp3 filter=lfs diff=lfs merge=lfs -text
