--- a/package.json
+++ b/package.json
@@ -46,49 +46,50 @@
   },
   "dependencies": {
     "ammo.js": "^0.0.10",
-    "animejs": "^3.2.0",
-    "three": "^0.126.1",
+    "animejs": "^3.2.1",
+    "three": "^0.127.0",
     "three-mesh-bvh": "^0.3.7"
   },
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
-    "@types/animejs": "^3.1.2",
-    "@types/jest": "^26.0.20",
-    "@types/node": "14.14.22",
-    "@types/three": "^0.126.1",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.14.0",
+    "@types/animejs": "^3.1.3",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^14.14.45",
+    "@types/three": "^0.127.1",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
+    "@yushijinhun/three-minifier-webpack": "^0.2.0",
     "babel-jest": "^26.6.3",
     "cross-env": "^7.0.3",
-    "css-loader": "5.0.1",
-    "electron": "^11.2.1",
-    "electron-builder": "^22.8.0",
-    "eslint": "^7.18.0",
+    "css-loader": "^5.2.4",
+    "electron": "^12.0.7",
+    "electron-builder": "^22.10.5",
+    "eslint": "^7.26.0",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^4.0.2",
+    "eslint-webpack-plugin": "^2.5.4",
     "file-loader": "^6.2.0",
     "gltf-loader-2": "^0.0.3",
     "jest": "^26.6.3",
-    "jest-canvas-mock": "^2.2.0",
-    "mini-css-extract-plugin": "^1.3.4",
+    "jest-canvas-mock": "^2.3.1",
+    "mini-css-extract-plugin": "^1.6.0",
     "minimist": "^1.2.5",
-    "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.1",
+    "node-sass": "^6.0.0",
+    "sass-loader": "^10.2.0",
     "style-loader": "^2.0.0",
-    "stylelint": "^13.9.0",
-    "stylelint-config-standard": "^20.0.0",
-    "svelte": "^3.31.2",
-    "svelte-loader": "^3.0.0",
-    "svelte-preprocess": "^4.6.3",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
+    "svelte": "^3.38.2",
+    "svelte-loader": "^3.1.1",
+    "svelte-preprocess": "^4.7.3",
     "terser-webpack-plugin": "^4.2.3",
-    "ts-jest": "^26.4.4",
-    "ts-loader": "^8.0.14",
-    "typescript": "^4.1.3",
-    "url-loader": "^4.1.0",
+    "ts-jest": "^26.5.6",
+    "ts-loader": "^8.2.0",
+    "typescript": "^4.2.4",
+    "url-loader": "^4.1.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.10.3",
-    "worker-loader": "^3.0.7"
+    "webpack-dev-server": "^3.11.2",
+    "worker-loader": "^3.0.8"
   },
   "resolutions": {
     "minimist": "^1.2.5"
