--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Ustym Ukhman <ustym.ukhman@gmail.com>",
   "homepage": "https://github.com/UstymUkhman/YetAnotherZombieHorror#readme",
   "main": "src/main.ts",
-  "version": "0.3.0",
+  "version": "0.3.5",
   "license": "MIT",
   "private": false,
   "repository": {
@@ -30,74 +30,57 @@
     "zombie-survival-shooter"
   ],
   "scripts": {
-    "start:app": "webpack --env app && tsc --project app && yarn build:dev",
-    "build:dev": "cross-env ENVIRONMENT=development electron build/main.js",
-    "pack:app": "electron-builder --dir --config build/builder.yml",
-    "dist:app": "electron-builder --config build/builder.yml",
-    "test:watch": "./node_modules/.bin/jest --watch --silent",
-    "test:run": "./node_modules/.bin/jest --notify --silent",
-    "start:web": "webpack-dev-server --inline --progress",
-    "test:clear": "./node_modules/.bin/jest --clearCache",
     "postinstall": "electron-builder install-app-deps",
-    "build:app": "yarn build:web && tsc --project app",
-    "lint:css": "stylelint **/*.{svelte,scss,css}",
+    "start:web": "vite",
+    "build:dev": "cross-env ENVIRONMENT=development electron build/main.js",
+    "start:app": "yarn build:web && tsc --project app && yarn build:dev",
     "lint:js": "eslint src/**/*.{ts,tsx,js,jsx}",
-    "test:cover": "yarn test:jest --coverage",
-    "build:web": "webpack --env build",
-    "serve": "npx http-server"
+    "lint:css": "stylelint **/*.{svelte,scss,css}",
+    "test:run": "./node_modules/.bin/jest --notify --silent",
+    "test:watch": "./node_modules/.bin/jest --watch --silent",
+    "test:clear": "./node_modules/.bin/jest --clearCache",
+    "test:cover": "yarn test:run --coverage",
+    "build:web": "vite build",
+    "build:app": "yarn build:web && tsc --project app",
+    "pack:app": "electron-builder --dir --config build/builder.yml",
+    "dist:app": "electron-builder --config build/builder.yml"
   },
   "dependencies": {
     "ammo.js": "^0.0.10",
     "animejs": "^3.2.1",
-    "three": "^0.127.0",
+    "three": "^0.129.0",
     "three-mesh-bvh": "^0.3.7"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.14.2",
     "@babel/plugin-transform-modules-commonjs": "^7.14.0",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.10",
     "@types/animejs": "^3.1.3",
     "@types/jest": "^26.0.23",
-    "@types/node": "^14.14.45",
-    "@types/three": "^0.127.1",
-    "@typescript-eslint/eslint-plugin": "^4.23.0",
-    "@typescript-eslint/parser": "^4.23.0",
-    "@yushijinhun/three-minifier-webpack": "^0.2.0",
-    "babel-jest": "^26.6.3",
+    "@types/node": "^15.12.0",
+    "@types/three": "^0.129.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "babel-jest": "^27.0.2",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.2.4",
-    "electron": "^12.0.7",
+    "electron": "^13.1.0",
     "electron-builder": "^22.10.5",
-    "eslint": "^7.26.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-webpack-plugin": "^2.5.4",
-    "file-loader": "^6.2.0",
-    "gltf-loader-2": "^0.0.3",
-    "jest": "^26.6.3",
+    "eslint": "^7.27.0",
+    "jest": "^27.0.4",
     "jest-canvas-mock": "^2.3.1",
-    "mini-css-extract-plugin": "^1.6.0",
-    "minimist": "^1.2.5",
-    "node-sass": "^6.0.0",
-    "sass-loader": "^10.2.0",
-    "style-loader": "^2.0.0",
+    "node-notifier": "^10.0.0",
+    "sass": "^1.34.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "svelte": "^3.38.2",
-    "svelte-loader": "^3.1.1",
     "svelte-preprocess": "^4.7.3",
-    "terser-webpack-plugin": "^4.2.3",
-    "ts-jest": "^26.5.6",
-    "ts-loader": "^8.2.0",
-    "typescript": "^4.2.4",
-    "url-loader": "^4.1.1",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2",
-    "worker-loader": "^3.0.8"
-  },
-  "resolutions": {
-    "minimist": "^1.2.5"
+    "ts-jest": "^27.0.2",
+    "typescript": "^4.3.2",
+    "vite": "^2.3.6",
+    "vite-plugin-glsl": "^0.0.3"
   },
   "engines": {
-    "node": ">= 12.16.1",
-    "npm": ">= 6.13.4"
+    "node": ">= 14.17.0",
+    "npm": ">= 6.14.13"
   }
 }
