--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,48 +1,49 @@
 {
-  "name": "Yet Another Zombie Horror",
-  "orientation": "landscape",
-  "display": "fullscreen",
+  "scope": "/",
+  "start_url": "/",
   "short_name": "YAZH",
-  "start_url": "./",
-  "scope": "./",
+  "display": "fullscreen",
+  "orientation": "landscape",
+  "name": "YetAnotherZombieHorror",
+  "description": "Yet Another Zombie Horror",
   "icons": [{
-    "src": ".\/favicon\/android-icon-36x36.png",
+    "src": "\/favicon\/android-icon-36x36.png",
     "purpose": "any maskable",
     "type": "image\/png",
     "sizes": "36x36",
     "density": "0.75"
   }, {
-    "src": ".\/favicon\/android-icon-48x48.png",
+    "src": "\/favicon\/android-icon-48x48.png",
     "purpose": "any maskable",
     "type": "image\/png",
     "sizes": "48x48",
     "density": "1.0"
   }, {
-    "src": ".\/favicon\/android-icon-72x72.png",
+    "src": "\/favicon\/android-icon-72x72.png",
     "purpose": "any maskable",
     "type": "image\/png",
     "sizes": "72x72",
     "density": "1.5"
   }, {
-    "src": ".\/favicon\/android-icon-96x96.png",
+    "src": "\/favicon\/android-icon-96x96.png",
     "purpose": "any maskable",
     "type": "image\/png",
     "sizes": "96x96",
     "density": "2.0"
   }, {
-    "src": ".\/favicon\/android-icon-144x144.png",
+    "src": "\/favicon\/android-icon-144x144.png",
     "purpose": "any maskable",
     "type": "image\/png",
     "sizes": "144x144",
     "density": "3.0"
   }, {
-    "src": ".\/favicon\/android-icon-192x192.png",
+    "src": "\/favicon\/android-icon-192x192.png",
     "purpose": "any maskable",
     "type": "image\/png",
     "sizes": "192x192",
     "density": "4.0"
   }, {
-    "src": ".\/favicon\/favicon-512x512.png",
+    "src": "\/favicon\/favicon-512x512.png",
     "purpose": "any maskable",
     "type": "image\/png",
     "sizes": "512x512",
