--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "allowSyntheticDefaultImports": true,
     "noUnusedParameters": false,
     "moduleResolution": "node",
+    "noImplicitReturns": true,
     "resolveJsonModule": true,
     "strictNullChecks": true,
     "esModuleInterop": true,
@@ -24,7 +25,6 @@
 
     "paths": {
       "@components/*": ["src/components/*"],
-      "@assets/*": ["src/assets/*"],
       "@/*": ["src/*"]
     },
 
