Fix base path in electron app
Update disabled JS screen
Update unsupported browser screen
Fix custom fonts for IE11 rendering
Update electron app configs
Remove CloseButton component

--- a/package.json
+++ b/package.json
@@ -30,20 +30,21 @@
     "zombie-survival-shooter"
   ],
   "scripts": {
-    "postinstall": "electron-builder install-app-deps",
     "start:web": "vite",
-    "build:dev": "cross-env ENVIRONMENT=development electron build/main.js",
-    "start:app": "yarn build:web && tsc --project app && yarn build:dev",
+    "build:web": "vite build",
+    "serve:web": "vite preview",
+    "build:app": "yarn build:web && tsc --project app",
+    "build:dev": "cross-env ENVIRONMENT=development electron build/app/main.js",
+    "start:app": "yarn build:app && yarn build:dev",
     "lint:js": "eslint src/**/*.{ts,tsx,js,jsx}",
     "lint:css": "stylelint **/*.{svelte,scss,css}",
     "test:run": "./node_modules/.bin/jest --notify --silent",
     "test:watch": "./node_modules/.bin/jest --watch --silent",
     "test:clear": "./node_modules/.bin/jest --clearCache",
     "test:cover": "yarn test:run --coverage",
-    "build:web": "vite build",
-    "build:app": "yarn build:web && tsc --project app",
     "pack:app": "electron-builder --dir --config app/builder.yml",
-    "dist:app": "electron-builder --config app/builder.yml"
+    "dist:app": "electron-builder --config app/builder.yml",
+    "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
     "ammo.js": "^0.0.10",
@@ -59,13 +60,13 @@
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.0",
     "@types/three": "^0.129.0",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
     "babel-jest": "^27.0.2",
     "cross-env": "^7.0.3",
     "electron": "^13.1.0",
     "electron-builder": "^22.10.5",
-    "eslint": "^7.27.0",
+    "eslint": "^7.28.0",
     "jest": "^27.0.4",
     "jest-canvas-mock": "^2.3.1",
     "node-notifier": "^10.0.0",
