--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "noUnusedParameters": true,
     "noImplicitReturns": true,
+    "resolveJsonModule": true,
     "strictNullChecks": true,
     "esModuleInterop": true,
     "noUnusedLocals": true,
@@ -16,15 +17,14 @@
     "baseUrl": ".",
     "strict": true,
 
+    "paths": {
+      "*": ["node_modules/*"]
+    },
+
     "typeRoots": [
       "node_modules/@types"
-    ],
-
-    "paths": {
-      "*": ["../node_modules/*"]
-    }
+    ]
   },
 
-  "typeRoots": ["../node_modules/@types"],
   "include": ["./**/*.ts"]
 }
