--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,19 @@
 {
   "compilerOptions": {
+    "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
+    "importsNotUsedAsValues": "error",
     "noUnusedParameters": false,
     "moduleResolution": "node",
     "noImplicitReturns": true,
     "resolveJsonModule": true,
     "strictNullChecks": true,
+    "isolatedModules": true,
     "esModuleInterop": true,
     "noUnusedLocals": true,
     "importHelpers": true,
     "noImplicitAny": true,
+    "skipLibCheck": true,
 
     "module": "esnext",
     "target": "es2019",
