--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,10 @@
+*.bin filter=lfs diff=lfs merge=lfs -text
+*.mp3 filter=lfs diff=lfs merge=lfs -text
+*.glb filter=lfs diff=lfs merge=lfs -text
+*.gltf filter=lfs diff=lfs merge=lfs -text
 *.blend filter=lfs diff=lfs merge=lfs -text
 *.blend1 filter=lfs diff=lfs merge=lfs -text
-public/**/textures/*.* filter=lfs diff=lfs merge=lfs -text
-public/assets/music/*.mp3 filter=lfs diff=lfs merge=lfs -text
+
+!YAZH.mp3 filter=lfs diff=lfs merge=lfs -text
+public/assets/**/*.png filter=lfs diff=lfs merge=lfs -text
+public/assets/**/*.jpg filter=lfs diff=lfs merge=lfs -text
