--- a/package.json
+++ b/package.json
@@ -50,22 +50,22 @@
     "ammo.js": "^0.0.10",
     "animejs": "^3.2.1",
     "three": "^0.129.0",
-    "three-mesh-bvh": "^0.3.7"
+    "three-mesh-bvh": "^0.4.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-export-namespace-from": "^7.14.2",
-    "@babel/plugin-transform-modules-commonjs": "^7.14.0",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.10",
+    "@babel/plugin-proposal-export-namespace-from": "^7.14.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.14.5",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
     "@types/animejs": "^3.1.3",
     "@types/jest": "^26.0.23",
-    "@types/node": "^15.12.0",
+    "@types/node": "^15.12.2",
     "@types/three": "^0.129.0",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "babel-jest": "^27.0.2",
     "cross-env": "^7.0.3",
-    "electron": "^13.1.0",
-    "electron-builder": "^22.10.5",
+    "electron": "^13.1.2",
+    "electron-builder": "^22.11.7",
     "eslint": "^7.28.0",
     "jest": "^27.0.4",
     "jest-canvas-mock": "^2.3.1",
@@ -77,8 +77,11 @@
     "svelte-preprocess": "^4.7.3",
     "ts-jest": "^27.0.2",
     "typescript": "^4.3.2",
-    "vite": "^2.3.6",
+    "vite": "^2.3.7",
     "vite-plugin-glsl": "^0.0.3"
+  },
+  "resolutions": {
+    "postcss": "^8.3.2"
   },
   "engines": {
     "node": ">= 14.17.0",
