--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
     "noImplicitAny": true,
     "skipLibCheck": true,
 
-    "module": "esnext",
-    "target": "es2019",
+    "module": "ESNext",
+    "target": "ES2020",
     "sourceMap": true,
     "jsx": "preserve",
     "checkJs": true,
