Add setup scripts
Update unit tests
Fix assets base path
Update README & vite.config

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,10 @@ pids
 .lock-wscript
 
 dist/
-build/
+build/*
 coverage/
+!build/*.mjs
 node_modules/
-# public/assets/shaders/
+
+public/assets/shaders/*
+!public/assets/shaders/.gitkeep
