--- a/src/configs/settings.json
+++ b/src/configs/settings.json
@@ -1,5 +1,6 @@
 {
-  "dynamicClouds": false,
+  "physicalLights": true,
+  "dynamicClouds": true,
   "softParticles": true,
   "ammoPhysics": true,
 
