Update base path for production build
Fix aim release delay & sign
Update config tests
Update weapon recoil animation

--- a/src/configs/settings.json
+++ b/src/configs/settings.json
@@ -2,7 +2,7 @@
   "physicalLights": true,
   "dynamicClouds": true,
   "softParticles": true,
-  "ammoPhysics": true,
+  "ammoPhysics": false,
 
   "raindrops": true,
   "bakedFog": true,
