Update components structure
Add loading animation
Fix raindrops visibility
Update fire ratio

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -18,8 +18,8 @@
 
     "at-rule-no-unknown": [true, {
       "ignoreAtRules": [
-        "at-root", "content", "each", "else", "for",
-        "function", "if", "mixin", "return", "use"
+        "at-root", "include", "use", "mixin", "function",
+        "content", "for", "each", "if", "else", "return"
       ]
     }],
 
