Add postcss module
Update portals shader
Fix stylelint errors
Update fog shaders

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,12 @@
 {
   "root": true,
+  "customSyntax": "postcss-scss",
   "extends": "stylelint-config-standard",
+
+  "overrides": [{
+    "files": ["**/*.svelte"],
+    "customSyntax": "postcss-html"
+  }],
 
   "rules": {
     "block-closing-brace-newline-after": null,
