--- a/package.json
+++ b/package.json
@@ -52,35 +52,38 @@
     "animejs": "^3.2.1",
     "raindrop-fx": "^1.0.8",
     "three": "^0.134.0",
-    "three-mesh-bvh": "^0.5.0"
+    "three-mesh-bvh": "^0.5.2"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-export-namespace-from": "^7.14.5",
-    "@babel/plugin-transform-modules-commonjs": "^7.15.4",
+    "@babel/plugin-proposal-export-namespace-from": "^7.16.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.16.0",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "@types/animejs": "^3.1.4",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.6",
-    "@types/three": "^0.133.1",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
+    "@types/node": "^16.11.7",
+    "@types/three": "^0.134.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "babel-jest": "^27.3.1",
     "cross-env": "^7.0.3",
-    "electron": "^15.3.0",
+    "electron": "^16.0.0",
     "electron-builder": "^22.13.1",
-    "eslint": "^8.1.0",
+    "eslint": "^8.2.0",
     "jest": "^27.3.1",
     "jest-canvas-mock": "^2.3.1",
     "node-notifier": "^10.0.0",
+    "postcss": "^8.3.11",
+    "postcss-html": "^1.2.0",
+    "postcss-scss": "^4.0.2",
     "sass": "^1.43.4",
     "stylelint": "^14.0.1",
-    "stylelint-config-standard": "^23.0.0",
-    "svelte": "^3.44.0",
+    "stylelint-config-standard": "^24.0.0",
+    "svelte": "^3.44.1",
     "svelte-preprocess": "^4.9.8",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4",
-    "vite": "^2.6.13",
-    "vite-plugin-glsl": "^0.0.4"
+    "vite": "^2.6.14",
+    "vite-plugin-glsl": "^0.0.5"
   },
   "engines": {
     "node": ">= 14.17.0",
