--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "electron": "^16.0.4",
     "electron-builder": "^22.14.5",
     "eslint": "^8.4.1",
+    "fake-indexeddb": "^3.1.7",
     "jest": "^27.4.5",
     "jest-canvas-mock": "^2.3.1",
     "node-notifier": "^10.0.0",
