Update project dependencies (Three.js r0.137.5)
Fix typos in Readme.md
Remove alpha: true as it's default now
Add color-function-notation in stylelint configs

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -17,6 +17,7 @@
     "comment-empty-line-before": null,
     "at-rule-empty-line-before": null,
     "number-no-trailing-zeros": null,
+    "color-function-notation": null,
     "rule-empty-line-before": null,
     "length-zero-no-unit": null,
     "function-name-case": null,
