--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "setup": "node ./build/index.mjs",
     "start:web": "vite",
     "build:web": "vite build",
-    "serve:web": "vite preview",
+    "serve:web": "node ./build/web.mjs",
+    "build:prod": "set prod=true&& vite build",
     "build:app": "yarn build:web && tsc --project app",
     "build:dev": "cross-env ENVIRONMENT=development electron build/app/main.js",
     "start:app": "yarn build:app && yarn build:dev",
@@ -51,39 +52,40 @@
     "ammo.js": "^0.0.10",
     "animejs": "^3.2.1",
     "raindrop-fx": "^1.0.8",
-    "three": "^0.139.2",
-    "three-mesh-bvh": "^0.5.9"
+    "three": "^0.140.0",
+    "three-mesh-bvh": "^0.5.10"
   },
   "devDependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.16.5",
     "@babel/plugin-transform-modules-commonjs": "^7.17.9",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.41",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.42",
     "@types/animejs": "^3.1.4",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.23",
-    "@types/three": "^0.139.0",
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
+    "@types/jest": "^27.5.0",
+    "@types/node": "^17.0.31",
+    "@types/three": "^0.140.0",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
     "babel-jest": "^27.5.1",
     "cross-env": "^7.0.3",
-    "electron": "^18.0.3",
+    "electron": "^18.2.0",
     "electron-builder": "^23.0.3",
-    "eslint": "^8.13.0",
+    "eslint": "^8.14.0",
     "fake-indexeddb": "^3.1.7",
     "jest": "^27.5.1",
-    "jest-canvas-mock": "^2.3.1",
+    "jest-canvas-mock": "^2.4.0",
+    "jest-environment-jsdom": "^27.5.1",
     "node-notifier": "^10.0.1",
-    "postcss": "^8.4.12",
-    "postcss-html": "^1.3.0",
-    "postcss-scss": "^4.0.2",
-    "sass": "^1.50.0",
-    "stylelint": "^14.6.1",
+    "postcss": "^8.4.13",
+    "postcss-html": "^1.4.1",
+    "postcss-scss": "^4.0.4",
+    "sass": "^1.51.0",
+    "stylelint": "^14.8.2",
     "stylelint-config-standard": "^25.0.0",
-    "svelte": "^3.47.0",
-    "svelte-preprocess": "^4.10.5",
+    "svelte": "^3.48.0",
+    "svelte-preprocess": "^4.10.6",
     "ts-jest": "^27.1.4",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.1",
+    "typescript": "^4.6.4",
+    "vite": "^2.9.7",
     "vite-plugin-glsl": "^0.1.2"
   },
   "engines": {
