--- a/package.json
+++ b/package.json
@@ -30,23 +30,23 @@
     "zombie-survival-shooter"
   ],
   "scripts": {
+    "postinstall": "electron-builder install-app-deps",
     "setup": "node ./build/index.mjs",
     "start:web": "vite",
     "build:web": "vite build",
     "serve:web": "node ./build/web.mjs",
     "build:prod": "set prod=true&& vite build",
-    "build:app": "yarn build:web && tsc --project app",
-    "build:dev": "cross-env ENVIRONMENT=development electron build/app/main.js",
     "start:app": "yarn build:app && yarn build:dev",
-    "lint:js": "eslint src/**/*.{ts,tsx,js,jsx}",
-    "lint:css": "stylelint **/*.{svelte,scss,css}",
-    "test:run": "./node_modules/.bin/jest --notify --silent",
-    "test:watch": "./node_modules/.bin/jest --watch --silent",
-    "test:clear": "./node_modules/.bin/jest --clearCache",
-    "test:cover": "yarn test:run --coverage",
+    "build:app": "yarn build:web && tsc --project app",
+    "build:dev": "set ENVIRONMENT=development&& electron build/app/main.js",
     "pack:app": "electron-builder --dir --config app/builder.yml",
     "dist:app": "electron-builder --config app/builder.yml",
-    "postinstall": "electron-builder install-app-deps"
+    "lint:js": "eslint src/**/*.{ts,tsx,js,jsx}",
+    "lint:css": "stylelint **/*.{svelte,scss,css}",
+    "test:run": "jest --notify --silent",
+    "test:watch": "jest --watch --silent",
+    "test:cover": "yarn test:run --coverage",
+    "test:clear": "jest --clearCache"
   },
   "dependencies": {
     "ammo.js": "^0.0.10",
@@ -56,9 +56,10 @@
     "three-mesh-bvh": "^0.5.10"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-export-namespace-from": "^7.16.5",
+    "@babel/core": ">=7.10.2 <8.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.16.7",
     "@babel/plugin-transform-modules-commonjs": "^7.17.9",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.42",
+    "@sveltejs/vite-plugin-svelte": "1.0.0-next.42",
     "@types/animejs": "^3.1.4",
     "@types/jest": "^27.5.0",
     "@types/node": "^17.0.31",
@@ -66,10 +67,9 @@
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "babel-jest": "^27.5.1",
-    "cross-env": "^7.0.3",
     "electron": "^18.2.0",
     "electron-builder": "^23.0.3",
-    "eslint": "^8.14.0",
+    "eslint": "^8.15.0",
     "fake-indexeddb": "^3.1.7",
     "jest": "^27.5.1",
     "jest-canvas-mock": "^2.4.0",
@@ -85,7 +85,7 @@
     "svelte-preprocess": "^4.10.6",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.4",
-    "vite": "^2.9.7",
+    "vite": "^2.9.8",
     "vite-plugin-glsl": "^0.1.2"
   },
   "engines": {
